<resources>
    <string name="app_name" translatable="false">LeoApp</string>
    <string name="dismiss" translatable="false">OK</string>
    <string name="confirm" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Sorry, something went wrong</string>
    <string name="hours_settings_template">%1$s h</string>
    <string name="share">Share</string>
    <string name="share_text" translatable="false">Stimme in der LeoApp Umfrage \"%1$s\" ab! &#9885; Installiere die LeoApp über den Playstore: http://app.leoapp-slg.de</string>
    <string name="drawer_placeholder_name">Username</string>
    <string name="drawer_placeholder_grade">Grade</string>
    <string name="no_surveys">No surveys available</string>
    <string name="no_entries">No entries</string>
    <string name="info_devs" translatable="false">LeoApp Team</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_load">Load exams</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_leave_chat">Leave chat</string>
    <string name="action_help">Help</string>
    <string name="action_request" translatable="false">Feature-Request</string>
    <string name="snackbar_ungültig">Subject or date are incorrect</string>
    <string name="snackbar_gelöscht">All Exams deleted</string>
    <string name="snackbar_undo">Undo</string>
    <string name="snackbar_no_connection_info">No internet connection</string>
    <string name="snackbar_no_connection_button">Dismiss</string>
    <string name="settings_snackbar_username_taken">That username is already taken</string>
    <string name="snackbar_no_connection_info_check">No internet connection to check login data</string>
    <string name="snackbar_not_correct_info">Login data not correct</string>
    <string name="SnackBarMes">Could not load plan</string>
    <string name="SnackBarMes2">No Grade selected</string>
    <string name="snackbar_select">Select</string>
    <string name="snackbar_date_invalid">Date is invalid</string>
    <string name="snackbar_missing_title">Please add a subject</string>
    <string name="title_home">Home</string>
    <string name="title_foodmarks">Foodmarks</string>
    <string name="title_testplan">Exams</string>
    <string name="title_messenger" translatable="false">Messenger</string>
    <string name="title_tutoring">Tutoring</string>
    <string name="title_news">Pin Board</string>
    <string name="title_survey">Mood</string>
    <string name="title_plan">Timetable</string>
    <string name="title_subst">Substitutions</string>
    <string name="title_settings">Settings</string>
    <string name="title_settings_notifications">Notifications</string>
    <string name="summary_info_auth">In order to use some of the features, you need to be verified. You can do so by clicking the button below.</string>
    <string name="summary_info_foodmark">This feature is used to confirm your lunch order digitally. Just show the QR-Code to the mensa staff.</string>
    <string name="summary_info_testplan">This is an automatically generated plan for your tests. You can filter them by configuring your settings or add your own assignments</string>
    <string name="summary_info_messenger">Use this feature to communicate with your classmates or teachers without them knowing your mobile number. You can add group chats or chat normally. Your username can be changed in the settings</string>
    <string name="summary_info_tutoring">In need of a tutor or a student? Just add a message to the tutoring board!</string>
    <string name="summary_info_news">You can find all relevant news concerning your scholar life on the LeoApp-Newsboard</string>
    <string name="summary_info_survey">You can choose your current mood daily and see some statistics</string>
    <string name="summary_info_subst">See your substitutions for today and tomorrow</string>
    <string name="summary_info_schedule">After choosing your lessons, a schedule will be generated which you can further customize</string>
    <string name="coming_soon" translatable="false">Coming soon!</string>
    <string name="button_card_dismiss">Dismiss</string>
    <string name="add_card">Add card</string>
    <string name="button_add">Add</string>
    <string name="selector_card">Add card(s)</string>
    <string name="button_info_try">Try it</string>
    <string name="title_info_auth_failed">You are not verified yet</string>
    <string name="title_info_auth">You are verified</string>
    <string name="summary_about">Information about this application</string>
    <string name="cards_customize">Adjust</string>
    <string name="thank_you_feature">Thank you for your feedback</string>
    <string name="set_changes">Save changes</string>
    <string name="feature_request">Explain your suggestion</string>
    <string name="feature_request_title">Feature idea</string>
    <string name="cards_quick">Quick access</string>
    <string name="discard">Discard</string>
    <string name="todo_description">\t- Terminplaner \t- Digitaler Vertretungsplan \t- Nachhilfebörse \t- Eure Vorschläge</string>
    <string name="toolbar_name_info">About</string>
    <string name="info_screen_title">LeoApp for Android</string>
    <string name="info_screen_first" translatable="false">VersionPlaceholder</string>
    <string name="info_screen_second">Developed in the informatics project course 2017 by students of the SLG</string>
    <string name="info_screen_third" translatable="false">St. Leonhard Gymnasium</string>
    <string name="info_screen_fourth">No responsibility is be taken for the accuracy of any information</string>
    <string name="info_screen_fifth">Developer</string>
    <string name="toolbar_scan">Scan!</string>
    <string name="toolbar_title">Essensbons</string>
    <string name="button_scan">Scan</string>
    <string name="button_confirm" translatable="false">OK</string>
    <string name="textview_placeholder" translatable="false">placeholder</string>
    <string name="qr_display_title">Your order for today, the</string>
    <string name="qr_display_menu">Menu</string>
    <string name="dialog_desc_valid">Ordered menu:</string>
    <string name="dialog_desc_valid_id" translatable="false">User-ID: </string>
    <string name="qr_display_not_ordered">You have no order for today</string>
    <string name="qr_display_not_loggedin">You\'re not logged in, please check your user data</string>
    <string name="explain_title_1" translatable="false">Info</string>
    <string name="explain_desc_1">This is used to scan the QR-Foodmarks.</string>
    <string name="explain_title_2">Step 1</string>
    <string name="explain_desc_2">Use the scan button below to start the camera and move the green box above the QR-code you intend on scanning and wait for the app to process the result.</string>
    <string name="explain_title_3">Step 2</string>
    <string name="explain_desc_3">After a successful scan you will get all necessary information: Mainly whether or not the code has already been used and which menu was ordered.</string>
    <string name="invalidId">User-ID invalid</string>
    <string name="popup_code_not_valid">Code is not valid or has already been scanned by this device</string>
    <string name="notification_summary_notif">You haven\'t synchronized your order yet</string>
    <string name="login_success">Login successful</string>
    <string name="no_order">No order</string>
    <string name="not_loggedin">Not logged in</string>
    <string name="minutes">Minutes</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="title_activity">Exam</string>
    <string name="klausuren_filename" translatable="false">klausuren.txt</string>
    <string name="subject">Subject</string>
    <string name="date">Date</string>
    <string name="date_format" translatable="false">DD.MM.YY</string>
    <string name="note">Grade</string>
    <string name="week">Week</string>
    <string name="name_of_chat">Chatname</string>
    <string name="title_new_groupchat">New group</string>
    <string name="serviceDescription">Receives messages while the app is closed</string>
    <string name="need_internet">To do this, you need an internet connection</string>
    <string name="queue">Queue</string>
    <string name="edit_chat">Change chatname</string>
    <string name="add_user">Add users</string>
    <string name="remove_users">Remove users</string>
    <string name="menu_stundenplan_name">Edit Courses</string>
    <string name="mache_bild">Print</string>
    <string name="settings_category_general">General</string>
    <string name="settings_title_username">Username</string>
    <string name="settings_summary_username">Der Benutzername deines Schulaccounts</string>
    <string name="settings_title_level">Grade</string>
    <string name="settings_summary_level" translatable="false">N/A</string>
    <string name="settings_category_info">Contact &#38; Information</string>
    <string name="settings_title_version" translatable="false">Version</string>
    <string name="settings_summary_version" translatable="false">LeoApp v1.0.1</string>
    <string name="settings_title_contact">Contact</string>
    <string name="settings_summary_contact" translatable="false">email\@maildomain.de</string>
    <string name="settings_title_customid" translatable="false">Customer ID</string>
    <string name="settings_summary_customid">Enter your lunch.leo-ac.de customer ID</string>
    <string name="settings_summary_pw">Enter your lunch.leo-ac.de password</string>
    <string name="settings_title_sync" translatable="false">Auto-Sync</string>
    <string name="settings_summary_sync">Synchronize data on app start</string>
    <string name="settings_title_fade">Auto dismiss</string>
    <string name="settings_summary_fade">Automatically dismiss scan-information</string>
    <string name="settings_title_fade_time">Dismiss time</string>
    <string name="settings_summary_fade_time">Time the dialog window stays open</string>
    <string name="settings_title_camera">Use front camera</string>
    <string name="settings_summary_camera">Use the front camera for the scan interface</string>
    <string name="settings_title_mode" translatable="false">MensaMode&#8482;</string>
    <string name="settings_summary_mode">MensaMode&#8482; for canteen staff</string>
    <string name="settings_title_notification">Receive notifications</string>
    <string name="settings_summary_notification">Notify me on missing synchronisation</string>
    <string name="settings_title_notification_time">Notification Time</string>
    <string name="settings_summary_notification_time">When should we remind you?</string>
    <string name="settings_summary_notification_test">Notify me on approaching exams</string>
    <string name="settings_summary_notification_survey">Notify me if I haven\\\'nt voted yet</string>
    <string name="settings_summary_notification_schedule">Notify me about my lessons tomorrow</string>
    <string name="settings_summary_notification_news">Notify me about new entries</string>
    <string name="settings_summary_notification_messenger">Notify me about new messages</string>
    <string name="settings_summary_testplan_time">Delete exams after...</string>
    <string name="settings_title_testplan_time">Delete test</string>
    <string name="settings_title_test_timetable">Filter</string>
    <string name="settings_summary_messenger_sync">All your messages and chats will be deleted and then downloaded again</string>
    <string name="settings_title_messenger_sync">Synchronize your device</string>
    <string name="settings_title_reasons_survey">Reasons</string>
    <string name="settings_summary_reasons_survey">Show reasons when choosing your mood</string>
    <string name="button_info_auth">Verify</string>
    <string name="title_randstundenfinder">Randstundenfinder</string>
</resources>