<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_general_settings"
        android:title="@string/settings_category_general">

        <EditTextPreference
            android:enabled="true"
            android:key="pref_key_username_general"
            android:summary="@string/settings_summary_username"
            android:title="@string/settings_title_username" />

        <de.slg.startseite.ClassPickerPref
            android:enabled="true"
            android:key="pref_key_level_general"
            android:summary="@string/settings_summary_level"
            android:title="@string/settings_title_level" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/title_foodmarks">

        <EditTextPreference
            android:key="pref_key_qr_id"
            android:summary="@string/settings_summary_customid"
            android:title="@string/settings_title_customid" />
        <EditTextPreference
            android:inputType="textPassword"
            android:key="pref_key_qr_pw"
            android:summary="@string/settings_summary_pw"
            android:title="@string/settings_title_pw" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_mensa_mode"
            android:summary="@string/settings_summary_mode"
            android:title="@string/settings_title_mode" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_qr_camera"
            android:summary="@string/settings_summary_camera"
            android:title="@string/settings_title_camera" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_notification"
            android:summary="@string/settings_summary_notification"
            android:title="@string/settings_title_notification" />

        <de.slg.essensqr.TimePickerPreference
            android:key="pref_key_notification_time"
            android:summary="@string/settings_summary_notification_time"
            android:title="@string/settings_title_notification_time" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_qr_sync"
            android:summary="@string/settings_summary_sync"
            android:title="@string/settings_title_sync" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_qr_autofade"
            android:summary="@string/settings_summary_fade"
            android:title="@string/settings_title_fade" />

        <de.slg.essensqr.NumberPickerPref
            android:enabled="false"
            android:key="pref_key_qr_autofade_time"
            android:summary="@string/settings_summary_fade_time"
            android:title="@string/settings_title_fade_time" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/title_testplan">

        <de.slg.klausurplan.NumberPickerPref
            android:key="pref_key_delete"
            android:persistent="true"
            android:summary="@string/settings_summary_testplan_time"
            android:title="@string/settings_title_testplan_time" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_test_timetable_sync"
            android:summary="@string/settings_summary_test_timetable"
            android:title="@string/settings_title_test_timetable" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_notification_test"
            android:summary="@string/settings_summary_notification_test"
            android:title="@string/settings_title_notification" />

        <de.slg.essensqr.TimePickerPreference
            android:key="pref_key_notification_time_test"
            android:summary="@string/settings_summary_notification_time"
            android:title="@string/settings_title_notification_time" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/title_messenger">

        <de.slg.messenger.NumberPickerPref
            android:key="pref_key_refresh"
            android:persistent="true"
            android:defaultValue="2"
            android:summary="@string/settings_summary_refresh_interval"
            android:title="@string/settings_title_refresh_interval" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_notification_messenger"
            android:summary="@string/settings_summary_notification_messenger"
            android:title="@string/settings_title_notification" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/title_news">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_notification_news"
            android:summary="@string/settings_summary_notification_news"
            android:title="@string/settings_title_notification" />

        <de.slg.essensqr.TimePickerPreference
            android:key="pref_key_notification_time_news"
            android:summary="@string/settings_summary_notification_time"
            android:title="@string/settings_title_notification_time" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/title_survey">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_notification_survey"
            android:summary="@string/settings_summary_notification_survey"
            android:title="@string/settings_title_notification" />

        <de.slg.essensqr.TimePickerPreference
            android:key="pref_key_notification_time_survey"
            android:summary="@string/settings_summary_notification_time"
            android:title="@string/settings_title_notification_time" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/title_plan">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_notification_schedule"
            android:summary="@string/settings_summary_notification_schedule"
            android:title="@string/settings_title_notification" />

        <de.slg.essensqr.TimePickerPreference
            android:key="pref_key_notification_time_schedule"
            android:summary="@string/settings_summary_notification_time"
            android:title="@string/settings_title_notification_time" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_info_settings"
        android:title="@string/settings_category_info">

        <Preference
            android:summary="@string/settings_summary_contact"
            android:title="@string/settings_title_contact" />

        <Preference
            android:key="pref_key_version_app"
            android:summary="@string/settings_summary_version"
            android:title="@string/settings_title_version" />

    </PreferenceCategory>

</PreferenceScreen>