<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/menu_stundenplan_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_picture"
        android:icon="@drawable/ic_image_white_24dp"
        android:title="@string/mache_bild"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/action_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_randstunde"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/title_randstundenfinder"
        app:showAsAction="never" />
</menu>