<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />


    <TextView
        android:id="@+id/textView3Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6Info"
        android:layout_centerHorizontal="true"
        android:text="@string/info_screen_title"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7Info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/info_screen_first"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView7Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="13dp"
        android:text="@string/info_screen_second"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView8Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7Info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/info_screen_third"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView9Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8Info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/info_screen_fourth"
        android:textSize="17sp" />

</RelativeLayout>